--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <body>
         <div class="menu-bar">
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#news">News</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li style="float:right"><a class="active" href="about.html">About</a></li>
