--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
             <li style="float:right"><a class="active" href="about.html">About</a></li>
         </ul>
     </div>
+    <div class="main-title">
+        <h1 class="title-text">The YCJA</h1>
+    </div>
 </body>
 </html>
