--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The YCJA</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="menu-bar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#news">News</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li style="float:right"><a class="active" href="about.html">About</a></li>
-        </ul>
-    </div>
-    <div class="main-title">
-        <h1 class="title-text">The YCJA</h1>
-    </div>
-</body>
+</htmlhead>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The YCJA</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div class="menu-bar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#news">News</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li style="float:right"><a class="active" href="about.html">About</a></li>
+            </ul>
+        </div>
+        <div class="main-title">
+            <h1 class="title-text">The YCJA</h1>
+        </div>
+    </body>
 </html>
