school commit hope it saves

--- a/about.html
+++ b/about.html
@@ -17,7 +17,9 @@
                 <li style="float:right"><a class="active" href="about.html">About</a></li>
             </ul>
         </div>
-        
+        <div class="title">
+            <h1 class="title-text">The YCJA</h1>
+        </div>
         <div class="about-container">
             <h1 class="about-title">
                 About The YCJA
