--- a/index.html
+++ b/index.html
@@ -19,5 +19,20 @@
         <div class="main-title">
             <h1 class="title-text">The YCJA</h1>
         </div>
+        <div class="description">
+            <img src="https://img.haikudeck.com/mg/c9173ff17b_1462193329982.jpg" class="index-image" />
+            <p class="desc">
+                The YCJA is the criminal youth justice system. Its main principles are crime prevention, rehabitiltation, reintegration and giving meaningful consequences to crime.
+            </p>
+            <p class="desc">
+                Crime prevention. The YCJA helps prevent crime by addressing the things that make up a young person's behaviour. It holds the person accountable and there are many different sentencing options to deal with the full range of crime a youth can commit.
+            </p>
+            <p class="desc">
+                Rehabilitiation. The YCJA with the consequences it gives helps rehabilitate and help them reintegrate young people who commit crimes back into society.
+            </p>
+            <p class="desc">
+                The YCJA ensures the youth that committed the crime gets a meaningful consequence related to their crime. That will affect their future behaviors and actions.
+            </p>
+        </div>
     </body>
 </html>
