--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="menu-bar">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#news">News</a></li>
+                <li><a href="sentencing.html">Sentences</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li style="float:right"><a class="active" href="about.html">About</a></li>
             </ul>
@@ -22,19 +22,20 @@
         <div class="description">
             <img src="https://img.haikudeck.com/mg/c9173ff17b_1462193329982.jpg" class="index-image" />
             <p class="desc">
-                Crime prevention. The YCJA helps prevent crime by addressing the things that make up a young person's behaviour. It holds the person accountable and there are many different sentencing options to deal with the full range of crime a youth can commit.
+                The Ycja helps change the person's behavior and actions. The Ycja Also holds the person accountable for their actions and offenses. They have lots of different sentencing options to cover and discipline the offenses the young offender has committed.
             </p>
             <p class="desc">
-                Rehabilitiation. The YCJA with the consequences it gives helps rehabilitate and help them reintegrate young people who commit crimes back into society.
+                Rehabilitiation. The YCJA with the consequences it gives help in areas where they need it and help the young people who commit crimes back into society or their community.
             </p>
             <p class="desc">
                 The YCJA ensures the youth that committed the crime gets a meaningful consequence related to their crime. That will affect their future behaviors and actions.
             </p>
             <p class="desc">
-                The YCJA is the criminal youth justice system. Its main principles are crime prevention, rehabitiltation, reintegration and giving meaningful consequences to crime.
+                The YCJA helps people come back to society in a better way than before they committed an offense. The YCJA gives consequences that will try to ensure that the offender will be less likely to commit any crime again. 
             </p>
         </div>
         <div class="legal-rights">
+            <p>The difference between the YCJA and the Criminal Code of Canada</p>
             <div class="ycja-rights">
                 <p class="ycja-info">
                     The YCJA applies to / deals with people from 12 to 18 years of age who have recently found themselves in trouble.
