--- a/index.html
+++ b/index.html
@@ -81,5 +81,11 @@
                 <img src="https://www.ctvnews.ca/polopoly_fs/1.1004246.1515610740!/httpImage/image.jpeg_gen/derivatives/landscape_1020/image.jpeg" class="ycja-info-image"/>
             </div>
         </div>
+        <div class="goals">
+            <h1>Our Goals</h1>
+            <li>
+                asdsasd
+            </li>
+        </div>
     </body>
 </html>
