finished home page

--- a/index.html
+++ b/index.html
@@ -84,10 +84,25 @@
             </div>
         </div>
         <div class="goals">
-            <h1>Our Goals</h1>
-            <li>
-                asdsasd
-            </li>
+            <h1 class="goal-title">Our Goals</h1>
+            <img src="https://www.justice.gc.ca/eng/cj-jp/yj-jj/img/fig1e.jpg" class="goal-img"/>
+            <p class="goal-p">With the YCJA act there are many things we want to accomplish. 
+                Out most important goals that we want this act to achieve would be the following. 
+                <br />
+                <br />
+                We want to protect the youth from mistakes they made when they were younger so they do not regret decisions they made when they did not know any better. The YCJA hopes to have people who committed crimes learn from their mistakes with the necessary treatment or consequence while still engaging with the community. However our most important goal is to prevent the amount of crime done in youths or the amount of crime done by youths who have already committed a crime before. 
+                <br />
+                <br />
+                To the right is an image of the kind of statistics that we want to reach by 1999.
+            </p>
+            
+        </div>
+
+        <div class="end">
+            <p class="end-t">
+                Made by: Brian Li and Ben.
+                All Copyrights reserved.
+            </p>
         </div>
     </body>
 </html>
