--- a/sentencing.html
+++ b/sentencing.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sentencing.html">Sentences</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="sources.html">Sources</a></li>
                 <li style="float:right"><a class="active" href="about.html">About</a></li>
             </ul>
         </div>
@@ -92,7 +92,7 @@
         </div>
         <div class="end">
             <p class="end-t">
-                Made by: Brian Li and Ben.
+                Made by: Brian Li and Benjamin Radilla.
                 All Copyrights reserved.
             </p>
         </div>
