--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="sentencing.html">Sentences</a></li>
-                <li><a href="sources.html">Contact</a></li>
+                <li><a href="sources.html">Sources</a></li>
                 <li style="float:right"><a class="active" href="about.html">About</a></li>
             </ul>
         </div>
